# PythonMLEng

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
assignment1_andrewrafael/: score_headlines.py
assignment_andrewrafael/: consume_services.py  score_headlines_api.py  streamlit_app.py
