[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "assignment_andrewrafael"
version = "0.0.1"
description = "Create clean .py codes alysis prediction from newspaper headlines"
authors = [
  { name = "Andrew Rafael James" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["assignment_andrewrafael"]
include = ["pyproject.toml", "assignment_andrewrafael/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["assignment_andrewrafael"]
force-sort-within-sections = true

